gobmkida/c3/attack2
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/engine/reading.c:3336:33: error: use of undeclared identifier 'byte_9C689F'
&& to_move != ( unsigned __int8)byte_9C689F[v17] 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/engine/reading.c:3337:33: error: use of undeclared identifier 'byte_9C688C'
&& to_move != ( unsigned __int8)byte_9C688C[v17] 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/engine/reading.c:3773:23: error: use of undeclared identifier 'unk_4A65B3'
v56 = ( const char *)&unk_4A65B3; 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/engine/reading.c:3852:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[pos] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/engine/reading.c:3953:7: error: use of undeclared identifier 'byte_9C688C'
if ( !byte_9C688C[pos] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/engine/reading.c:3964:7: error: use of undeclared identifier 'byte_9C689F'
if ( !byte_9C689F[blib] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/engine/reading.c:3991:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[blib] ) 
     ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack2/src/obj/1/reading.o] Error 1
